// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationsInfosPage || LogoInput from computer should render upload modal with from computer tab 1`] = `
.c4 {
  background: #f6f6f9;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c5 {
  position: relative;
}

.c7 {
  padding-right: 8px;
  padding-left: 8px;
  overflow: hidden;
  width: 100%;
}

.c9 {
  height: 124px;
}

.c12 {
  max-width: 40%;
  max-height: 40%;
}

.c13 {
  position: absolute;
  bottom: 4px;
  width: 100%;
}

.c15 {
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c19 {
  padding-top: 8px;
  padding-right: 16px;
  padding-left: 16px;
}

.c21 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
  position: absolute;
}

.c24 {
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  z-index: 4;
}

.c26 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c28 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c32 {
  padding-right: 40px;
  padding-left: 40px;
}

.c34 {
  padding: 16px;
}

.c39 {
  background: #eaeaef;
}

.c41 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c43 {
  background: #f6f6f9;
  padding-top: 48px;
  padding-bottom: 32px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
  position: relative;
}

.c45 {
  color: #4945ff;
  width: 3.75rem;
  height: 3.75rem;
}

.c47 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c50 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c53 {
  padding-top: 24px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c42 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c44 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c51 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c2 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c20 {
  font-size: 0.75rem;
  line-height: 1.33;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c23 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c31 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c36 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c38 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c48 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c54 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c46 path {
  fill: #4945ff;
}

.c16 {
  position: relative;
  outline: none;
}

.c16 svg {
  height: 12px;
  width: 12px;
}

.c16 svg > g,
.c16 svg path {
  fill: #ffffff;
}

.c16[aria-disabled='true'] {
  pointer-events: none;
}

.c16:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c16:focus-visible {
  outline: none;
}

.c16:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c52 {
  height: 2rem;
}

.c52[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c52[aria-disabled='true'] .c1 {
  color: #666687;
}

.c52[aria-disabled='true'] svg > g,.c52[aria-disabled='true'] svg path {
  fill: #666687;
}

.c52[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c52[aria-disabled='true']:active .c1 {
  color: #666687;
}

.c52[aria-disabled='true']:active svg > g,.c52[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c52:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c52:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c52 svg > g,
.c52 svg path {
  fill: #ffffff;
}

.c57 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c57[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c57[aria-disabled='true'] .c1 {
  color: #666687;
}

.c57[aria-disabled='true'] svg > g,.c57[aria-disabled='true'] svg path {
  fill: #666687;
}

.c57[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c57[aria-disabled='true']:active .c1 {
  color: #666687;
}

.c57[aria-disabled='true']:active svg > g,.c57[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c57:hover {
  background-color: #f6f6f9;
}

.c57:active {
  background-color: #eaeaef;
}

.c57 .c1 {
  color: #32324d;
}

.c57 svg > g,
.c57 svg path {
  fill: #32324d;
}

.c22 {
  z-index: 4;
  display: none;
}

.c6 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'startAction slides endAction';
}

.c8 {
  grid-area: slides;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c40 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c17 svg > g,
.c17 svg path {
  fill: #8e8ea9;
}

.c17:hover svg > g,
.c17:hover svg path {
  fill: #666687;
}

.c17:active svg > g,
.c17:active svg path {
  fill: #a5a5ba;
}

.c17[aria-disabled='true'] svg path {
  fill: #666687;
}

.c25 {
  inset: 0;
  background: #32324d1F;
}

.c27 {
  width: 51.875rem;
}

.c29 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c55 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c56 > * + * {
  margin-left: 8px;
}

.c35 {
  border-bottom: 2px solid #4945ff;
}

.c37 {
  border-bottom: 2px solid transparent;
}

.c33[aria-disabled='true'] {
  cursor: not-allowed;
}

.c49 {
  opacity: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class=""
    >
      <div
        class="c0"
      >
        <label
          class="c1 c2"
          for="39"
        >
          <div
            class="c3"
          >
            logo input label
          </div>
        </label>
        <div
          class=""
          id="39"
        >
          <div
            class="c4"
          >
            <section
              aria-label="logo input label"
              aria-roledescription="carousel"
              class="c5 c6"
            >
              <div
                aria-live="polite"
                class="c7 c8"
                overflow="hidden"
              >
                <div
                  aria-label="Logo slide"
                  aria-roledescription="slide"
                  class="c9 c10 c11"
                  role="group"
                >
                  <img
                    alt="Logo"
                    class="c12"
                    src="/admin/defaultLogo.png"
                  />
                </div>
              </div>
              <div
                class="c13 c14"
              >
                <span>
                  <button
                    aria-disabled="false"
                    aria-labelledby="36"
                    class="c15 c10 c16 c17"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="c18"
                    >
                      Change logo
                    </span>
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                        fill="#212134"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </section>
            <div
              class="c19"
            >
              <span>
                <div
                  aria-labelledby="37"
                  class="c10"
                  tabindex="0"
                >
                  <span
                    class="c1 c20"
                  >
                    logo.png
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c18"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c21 c22"
      id="36"
      role="tooltip"
    >
      <p
        class="c1 c23"
      >
        Change logo
      </p>
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c21 c22"
      id="37"
      role="tooltip"
    >
      <p
        class="c1 c23"
      >
        logo.png
      </p>
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c24 c10 c25"
    >
      <div>
        <div>
          <div
            aria-labelledby="modal"
            aria-modal="true"
            class="c26 c27"
            role="dialog"
          >
            <div
              class="c28 c29"
            >
              <div
                class="c30"
              >
                <h2
                  class="c1 c31"
                  id="modal"
                >
                  Upload logo
                </h2>
                <button
                  aria-disabled="false"
                  class="c15 c10 c16 c17"
                  type="button"
                >
                  <span
                    class="c18"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417 21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417Z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c32"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-controls="43-0-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c33"
                    id="43-0-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c34 c35"
                    >
                      <span
                        class="c1 c36"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c33"
                    id="43-1-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c34 c37"
                    >
                      <span
                        class="c1 c38"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c39 c40"
                />
              </div>
              <div>
                <div
                  aria-labelledby="43-0-tab"
                  id="43-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c41"
                    >
                      <div
                        class=""
                      >
                        <label
                          for="logo-upload"
                        >
                          <div
                            class="c42"
                          >
                            <div
                              class="c43 c44"
                            >
                              <svg
                                aria-hidden="true"
                                class="c45 c46"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 20"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21.569 2.398H7.829v1.586h13.74c.47 0 .826.5.826 1.094v9.853l-2.791-3.17a2.13 2.13 0 0 0-.74-.55 2.214 2.214 0 0 0-.912-.196 2.215 2.215 0 0 0-.912.191 2.131 2.131 0 0 0-.74.546l-2.93 3.385-2.973-3.36a2.147 2.147 0 0 0-.741-.545 2.228 2.228 0 0 0-1.824.007c-.286.13-.538.319-.739.553l-2.931 3.432V7.653H2.51v9.894c.023.153.06.304.108.452v.127l.041.095c.057.142.126.28.207.412l.099.15c.074.107.157.207.247.302l.124.119c.13.118.275.222.43.309h.024c.36.214.775.327 1.198.325h16.515c.36-.004.716-.085 1.039-.24.323-.153.606-.375.827-.648a2.78 2.78 0 0 0 .504-.888c.066-.217.108-.44.124-.666V5.078a2.497 2.497 0 0 0-.652-1.81 2.706 2.706 0 0 0-1.776-.87Z"
                                  fill="#32324D"
                                />
                                <path
                                  d="M12.552 9.199c.912 0 1.651-.71 1.651-1.585 0-.876-.74-1.586-1.651-1.586-.912 0-1.652.71-1.652 1.586 0 .875.74 1.585 1.652 1.585ZM3.303 6.408h.826V3.997h2.477V2.41H4.129V0h-.826c-.219 0-.85.002-.826 0v2.411H0v1.586h2.477v2.41h.826Z"
                                  fill="#32324D"
                                />
                              </svg>
                              <div
                                class="c47"
                              >
                                <span
                                  class="c1 c48"
                                >
                                  Drag and Drop here or
                                </span>
                              </div>
                              <input
                                accept="image/jpeg,image/png,image/svg+xml"
                                class="c49"
                                cursor="pointer"
                                id="logo-upload"
                                name="files"
                                tabindex="-1"
                                type="file"
                              />
                              <button
                                aria-disabled="false"
                                class="c50 c51 c16 c52"
                                type="button"
                              >
                                <span
                                  class="c1 c23"
                                >
                                  Browse files
                                </span>
                              </button>
                              <div
                                class="c53"
                              >
                                <span
                                  class="c1 c54"
                                >
                                  Max dimension: 750x750, Max size: 100KB
                                </span>
                              </div>
                            </div>
                          </div>
                        </label>
                      </div>
                    </div>
                  </form>
                  <div
                    class="c28 c55"
                  >
                    <div
                      class="c30"
                    >
                      <div
                        class="c3 c56"
                      >
                        <button
                          aria-disabled="false"
                          class="c50 c51 c16 c57"
                          type="button"
                        >
                          <span
                            class="c1 c23"
                          >
                            Cancel
                          </span>
                        </button>
                      </div>
                      <div
                        class="c3 c56"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ApplicationsInfosPage || LogoInput from url should render upload modal with from url tab 1`] = `
.c4 {
  background: #f6f6f9;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c5 {
  position: relative;
}

.c7 {
  padding-right: 8px;
  padding-left: 8px;
  overflow: hidden;
  width: 100%;
}

.c9 {
  height: 124px;
}

.c12 {
  max-width: 40%;
  max-height: 40%;
}

.c13 {
  position: absolute;
  bottom: 4px;
  width: 100%;
}

.c15 {
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c19 {
  padding-top: 8px;
  padding-right: 16px;
  padding-left: 16px;
}

.c21 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
  position: absolute;
}

.c24 {
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  z-index: 4;
}

.c26 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c28 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c32 {
  padding-right: 40px;
  padding-left: 40px;
}

.c34 {
  padding: 16px;
}

.c39 {
  background: #eaeaef;
}

.c41 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c46 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c47 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c2 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c20 {
  font-size: 0.75rem;
  line-height: 1.33;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c23 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c31 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c38 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c36 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c16 {
  position: relative;
  outline: none;
}

.c16 svg {
  height: 12px;
  width: 12px;
}

.c16 svg > g,
.c16 svg path {
  fill: #ffffff;
}

.c16[aria-disabled='true'] {
  pointer-events: none;
}

.c16:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c16:focus-visible {
  outline: none;
}

.c16:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c49 {
  height: 2rem;
}

.c49[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c49[aria-disabled='true'] .c1 {
  color: #666687;
}

.c49[aria-disabled='true'] svg > g,.c49[aria-disabled='true'] svg path {
  fill: #666687;
}

.c49[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c49[aria-disabled='true']:active .c1 {
  color: #666687;
}

.c49[aria-disabled='true']:active svg > g,.c49[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c49:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c49:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c49 svg > g,
.c49 svg path {
  fill: #ffffff;
}

.c48 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c48[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c48[aria-disabled='true'] .c1 {
  color: #666687;
}

.c48[aria-disabled='true'] svg > g,.c48[aria-disabled='true'] svg path {
  fill: #666687;
}

.c48[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c48[aria-disabled='true']:active .c1 {
  color: #666687;
}

.c48[aria-disabled='true']:active svg > g,.c48[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c48:hover {
  background-color: #f6f6f9;
}

.c48:active {
  background-color: #eaeaef;
}

.c48 .c1 {
  color: #32324d;
}

.c48 svg > g,
.c48 svg path {
  fill: #32324d;
}

.c22 {
  z-index: 4;
  display: none;
}

.c6 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'startAction slides endAction';
}

.c8 {
  grid-area: slides;
}

.c43 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c43::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c43::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c43:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c43::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c43[aria-disabled='true'] {
  color: inherit;
}

.c43:focus {
  outline: none;
  box-shadow: none;
}

.c42 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c42:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c40 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c17 svg > g,
.c17 svg path {
  fill: #8e8ea9;
}

.c17:hover svg > g,
.c17:hover svg path {
  fill: #666687;
}

.c17:active svg > g,
.c17:active svg path {
  fill: #a5a5ba;
}

.c17[aria-disabled='true'] svg path {
  fill: #666687;
}

.c25 {
  inset: 0;
  background: #32324d1F;
}

.c27 {
  width: 51.875rem;
}

.c29 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c44 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c45 > * + * {
  margin-left: 8px;
}

.c37 {
  border-bottom: 2px solid #4945ff;
}

.c35 {
  border-bottom: 2px solid transparent;
}

.c33[aria-disabled='true'] {
  cursor: not-allowed;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class=""
    >
      <div
        class="c0"
      >
        <label
          class="c1 c2"
          for="91"
        >
          <div
            class="c3"
          >
            logo input label
          </div>
        </label>
        <div
          class=""
          id="91"
        >
          <div
            class="c4"
          >
            <section
              aria-label="logo input label"
              aria-roledescription="carousel"
              class="c5 c6"
            >
              <div
                aria-live="polite"
                class="c7 c8"
                overflow="hidden"
              >
                <div
                  aria-label="Logo slide"
                  aria-roledescription="slide"
                  class="c9 c10 c11"
                  role="group"
                >
                  <img
                    alt="Logo"
                    class="c12"
                    src="/admin/defaultLogo.png"
                  />
                </div>
              </div>
              <div
                class="c13 c14"
              >
                <span>
                  <button
                    aria-disabled="false"
                    aria-labelledby="88"
                    class="c15 c10 c16 c17"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="c18"
                    >
                      Change logo
                    </span>
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="1rem"
                      viewBox="0 0 24 24"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                        fill="#212134"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </section>
            <div
              class="c19"
            >
              <span>
                <div
                  aria-labelledby="89"
                  class="c10"
                  tabindex="0"
                >
                  <span
                    class="c1 c20"
                  >
                    logo.png
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c18"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c21 c22"
      id="88"
      role="tooltip"
    >
      <p
        class="c1 c23"
      >
        Change logo
      </p>
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c21 c22"
      id="89"
      role="tooltip"
    >
      <p
        class="c1 c23"
      >
        logo.png
      </p>
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c24 c10 c25"
    >
      <div>
        <div>
          <div
            aria-labelledby="modal"
            aria-modal="true"
            class="c26 c27"
            role="dialog"
          >
            <div
              class="c28 c29"
            >
              <div
                class="c30"
              >
                <h2
                  class="c1 c31"
                  id="modal"
                >
                  Upload logo
                </h2>
                <button
                  aria-disabled="false"
                  class="c15 c10 c16 c17"
                  type="button"
                >
                  <span
                    class="c18"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417 21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417Z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c32"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c33"
                    id="95-0-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c34 c35"
                    >
                      <span
                        class="c1 c36"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-controls="95-1-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c33"
                    id="95-1-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c34 c37"
                    >
                      <span
                        class="c1 c38"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c39 c40"
                />
              </div>
              <div>
                <div
                  aria-labelledby="95-1-tab"
                  id="95-1-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c41"
                    >
                      <div>
                        <div
                          class=""
                        >
                          <div
                            class="c0"
                          >
                            <label
                              class="c1 c2"
                              for="97"
                            >
                              <div
                                class="c3"
                              >
                                URL
                              </div>
                            </label>
                            <div
                              class="c30 c42"
                            >
                              <input
                                aria-disabled="false"
                                aria-invalid="false"
                                aria-required="false"
                                class="c43"
                                id="97"
                                name="logo-url"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c28 c44"
                    >
                      <div
                        class="c30"
                      >
                        <div
                          class="c3 c45"
                        >
                          <button
                            aria-disabled="false"
                            class="c46 c47 c16 c48"
                            type="button"
                          >
                            <span
                              class="c1 c23"
                            >
                              Cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c3 c45"
                        >
                          <button
                            aria-disabled="false"
                            class="c46 c47 c16 c49"
                            type="submit"
                          >
                            <span
                              class="c1 c23"
                            >
                              Next
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ApplicationsInfosPage || LogoInput logo input should match snapshot 1`] = `
.c3 {
  background: #f6f6f9;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c4 {
  position: relative;
}

.c6 {
  padding-right: 8px;
  padding-left: 8px;
  overflow: hidden;
  width: 100%;
}

.c8 {
  height: 124px;
}

.c11 {
  max-width: 40%;
  max-height: 40%;
}

.c12 {
  position: absolute;
  bottom: 4px;
  width: 100%;
}

.c14 {
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c18 {
  padding-top: 8px;
  padding-right: 16px;
  padding-left: 16px;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c19 {
  font-size: 0.75rem;
  line-height: 1.33;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c15 {
  position: relative;
  outline: none;
}

.c15 svg {
  height: 12px;
  width: 12px;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c15[aria-disabled='true'] {
  pointer-events: none;
}

.c15:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c15:focus-visible {
  outline: none;
}

.c15:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c17 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'startAction slides endAction';
}

.c7 {
  grid-area: slides;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 svg > g,
.c16 svg path {
  fill: #8e8ea9;
}

.c16:hover svg > g,
.c16:hover svg path {
  fill: #666687;
}

.c16:active svg > g,
.c16:active svg path {
  fill: #a5a5ba;
}

.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <label
        class="c1"
        for="3"
      >
        <div
          class="c2"
        >
          logo input label
        </div>
      </label>
      <div
        class=""
        id="3"
      >
        <div
          class="c3"
        >
          <section
            aria-label="logo input label"
            aria-roledescription="carousel"
            class="c4 c5"
          >
            <div
              aria-live="polite"
              class="c6 c7"
              overflow="hidden"
            >
              <div
                aria-label="Logo slide"
                aria-roledescription="slide"
                class="c8 c9 c10"
                role="group"
              >
                <img
                  alt="Logo"
                  class="c11"
                  src="/admin/defaultLogo.png"
                />
              </div>
            </div>
            <div
              class="c12 c13"
            >
              <span>
                <button
                  aria-disabled="false"
                  aria-labelledby="0"
                  class="c14 c9 c15 c16"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="c17"
                  >
                    Change logo
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </span>
            </div>
          </section>
          <div
            class="c18"
          >
            <span>
              <div
                aria-labelledby="1"
                class="c9"
                tabindex="0"
              >
                <span
                  class="c19"
                >
                  logo.png
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c17"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
